feat: add markdown parser
Developers can now parse markdown to an object that is ready to be saved to the database

BA-6 #resolve

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -5,5 +5,5 @@
     justify-content: space-between;
     align-items: center;
     background: vars.$color-primary-2;
-    padding: vars.$spacing-5 vars.$spacing-8;
+    padding: vars.$spacing-5 vars.$spacing-page;
 }
