--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -6,6 +6,7 @@ $spacing-5: 20px;
 $spacing-6: 24px;
 $spacing-7: 28px;
 $spacing-8: 32px;
+$spacing-page: 128px;
 
 $color-primary-1: #fffcf8;
 $color-primary-2: #e7bd92;
