--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -34,6 +34,7 @@
     padding: vars.$spacing-1 vars.$spacing-8;
     border: 2px solid vars.$color-accent-1;
     border-radius: vars.$border-radius;
+    text-decoration: none;
     cursor: pointer;
 }
 
@@ -59,6 +60,10 @@
 .btn-group {
     display: flex;
     gap: vars.$spacing-2;
+
+    &.align-right {
+        justify-content: flex-end;
+    }
 }
 
 .link {
@@ -156,4 +161,10 @@
 .textarea {
     @include textInput();
     resize: vertical;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: vars.$spacing-2;
 }
