--- a/src/styles/Popup.scss
+++ b/src/styles/Popup.scss
@@ -12,6 +12,7 @@
     padding: vars.$spacing-2 vars.$spacing-6;
     // border: 2px solid vars.$color-primary-3;
     background: vars.$color-primary-2;
+    border-radius: vars.$border-radius;
 
     & img {
         height: 16px;
